[gd_scene load_steps=4 format=3 uid="uid://c32a4huxnigkx"]

[ext_resource type="Script" uid="uid://dycxciugl23dr" path="res://win_screen/win_screen.gd" id="1_ket4b"]
[ext_resource type="Texture2D" uid="uid://b0uedlomuu6bu" path="res://art/cursor.png" id="2_o635i"]
[ext_resource type="Script" uid="uid://3iejfr66bnvt" path="res://menu/cursor.gd" id="3_jec3e"]

[node name="Win" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ket4b")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -77.0
offset_right = 100.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[font_size=40]!! You Win !![/font_size]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score_Box" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Score_Label" type="Label" parent="MarginContainer/VBoxContainer/Score_Box"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score:"
vertical_alignment = 1

[node name="Score_Text" type="Label" parent="MarginContainer/VBoxContainer/Score_Box"]
layout_mode = 2
size_flags_horizontal = 3
vertical_alignment = 1

[node name="Level_Box" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Level_Label" type="Label" parent="MarginContainer/VBoxContainer/Level_Box"]
layout_mode = 2
size_flags_horizontal = 3
text = "Level:"
vertical_alignment = 1

[node name="Level_Text" type="Label" parent="MarginContainer/VBoxContainer/Level_Box"]
layout_mode = 2
size_flags_horizontal = 3
vertical_alignment = 1

[node name="Leaderboard" type="Label" parent="MarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
text = "Leaderboard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Put in Your name"
alignment = 1

[node name="Error_label" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Confirm" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Confirm"

[node name="Main_Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Cursor" type="Sprite2D" parent="."]
position = Vector2(72, -40)
scale = Vector2(0.0293333, 0.0293333)
texture = ExtResource("2_o635i")
script = ExtResource("3_jec3e")

[connection signal="text_submitted" from="MarginContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main_Menu" to="." method="_on_main_menu_pressed"]
